# garment-flattening

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: 302_PolyVectors.cpp  compute_bnd.cpp  cut.cpp  energy_check.cpp  flat.cpp  flatten.cpp  flatten_with_constraints.cpp  flatten_with_json_constraints.cpp  igl_core.cpp  make_uv.cpp  map_tex.cpp  mccartney_energies.cpp  measure_alignment.cpp  multi_param.cpp  multiple_poses.cpp  net.cpp  param.cpp  procustes.cpp  procustes_app.cpp  render_coords.cpp  split.cpp  split_and_flatten.cpp  test_split_ccs.cpp  triangle_energies.cpp  woven_viz.cpp
appnew/: multiple_poses.cpp  procrustes_test.cpp  reflec_param.cpp  triangle_energies.cpp  woven_viz.cpp
configs/: final_config.json
data/: example_shirtfront00041.json
data/skirt_seams/: patch_0_dart_0.txt  patch_0_dart_1.txt  patch_1_dart_0.txt  patch_1_dart_1.txt  seam0.txt  seam1.txt
include/: bary_optimizer.h  cut_on_plane.h  cut_utils.h  dart.h  directional_param_min_example.cpp  draw_colormap.h  localglobal.h  localglobal_bary.h  localglobal_edges.h  mccartney.h  net_param.h  procustes.h  split_ccs.h  surface_net.h  utils.h
include/param/: bary_optimizer.h  cloth_param.h  dart.h  export_pattern.h  metrics.h  multi_patch_param.h  multiple_poses_param.h  param_utils.h  self_intersect.h
lib/clipper/: CMakeLists.txt
lib/implot/: CMakeLists.txt
script/: angle_deviation_viz.ipynb
scripts/: print_selected_vs.py  select_vertices_by_id.py
src/: bary_optimizer.cpp  net_param.cpp  procustes.cpp  surface_net.cpp
src/param/: auto_select.cpp  bary_optimizer.cpp  cloth_param.cpp  dart.cpp  metrics.cpp  multi_patch_param.cpp  param_utils.cpp  self_intersect.cpp
